ACME Hotels rebranding

--- a/hotel-website/index.html
+++ b/hotel-website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gravitee Hotels - Your AI-Powered Booking Experience</title>
+    <title>ACME Hotels - Your AI-Powered Booking Experience</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="assets/gravitee-logo/Horizontal_LightMode.svg" alt="Gravitee" class="logo">
+                <span class="brand-name">ACME</span>
                 <span class="hotel-name">Hotels</span>
             </div>
             <div class="nav-actions">
@@ -51,7 +51,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">Welcome to Gravitee Hotels</h1>
+            <h1 class="hero-title">Welcome to ACME Hotels</h1>
             <p class="hero-subtitle">Experience AI-powered hotel booking like never before</p>
             <button id="openChatBtn" class="btn btn-large btn-accent">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -65,7 +65,7 @@
     <!-- Features Section -->
     <section class="features">
         <div class="container">
-            <h2 class="section-title">Why Choose Gravitee Hotels?</h2>
+            <h2 class="section-title">Why Choose ACME Hotels?</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">🤖</div>
@@ -102,9 +102,9 @@
     <div id="chatWindow" class="chat-window hidden">
         <div class="chat-header">
             <div class="chat-header-info">
-                <img src="assets/gravitee-logo/Mark.svg" alt="Gravitee Bot" class="chat-logo">
+                <div class="chat-bot-icon">ACME</div>
                 <div>
-                    <h3>Gravitee Bot</h3>
+                    <h3>ACME Bot</h3>
                     <p class="chat-status" id="chatStatus">Initializing...</p>
                 </div>
             </div>
@@ -125,10 +125,10 @@
         <div class="chat-messages" id="chatMessages">
             <div class="message agent-message">
                 <div class="message-avatar">
-                    <img src="assets/gravitee-logo/Mark.svg" alt="Bot">
+                    <span class="bot-emoji">ACME</span>
                 </div>
                 <div class="message-content">
-                    <p>👋 Hello! I'm your Gravitee Hotels AI assistant. How can I help you today?</p>
+                    <p>👋 Hello! I'm your ACME Hotels AI assistant. How can I help you today?</p>
                 </div>
             </div>
         </div>
