new A2A communication with currency agent

--- a/agent-live-graph/public/index.html
+++ b/agent-live-graph/public/index.html
@@ -69,6 +69,13 @@
         <span class="lane-name">Gravitee Gateway</span>
         <span class="lane-sub">API, AI Management &amp; MCP Server</span>
       </div>
+      <div class="lane-header" data-lane="currency">
+        <div class="lane-icon icon-currency">
+          <i class="ph ph-currency-circle-dollar" style="font-size:24px"></i>
+        </div>
+        <span class="lane-name">Currency Agent</span>
+        <span class="lane-sub">A2A Conversion</span>
+      </div>
       <div class="lane-header" data-lane="llm">
         <div class="lane-icon icon-llm">
           <i class="ph ph-brain" style="font-size:24px"></i>
